syntax = "proto3";

package payment;

option java_multiple_files = true;
option java_package = "com.ecommerceapp.generated.payment";

enum PaymentProvider {
  PAYMENT_PROVIDER_UNSPECIFIED = 0; 
  VNPAY = 1;

}