syntax = "proto3";

package payment;

import "services/payment/payment_provider.proto";

option java_multiple_files = true;
option java_package = "com.ecommerceapp.generated.payment";


message MakePaymentRequest {
    string order_id=1;
    int32 amount=2;
    string ip_addr=3;
    PaymentProvider payment_provider=4; 
}