syntax = "proto3";

package payment;

import "services/payment/payment_provider.proto";

option java_multiple_files = true;
option java_package = "com.ecommerceapp.generated.payment";


message MakePaymentResponse {
    string payment_url=1;
}